force-app/main/default/objects/Monthly_KPI_Employee_Detail__c/Monthly_KPI_Employee_Detail__c.object-meta.xml
<CustomObject>
    <label>Monthly KPI Employee Detail</label>
    <nameField>
        <label>Monthly KPI Employee Detail Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Monthly KPI Employee Detail</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>