force-app/main/default/objects/Monthly_KPI_Employee_Detail__c/fields/Case__c.field-meta.xml
<CustomField>
    <fullName>Case__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Case</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Monthly KPI Employee Detail</relationshipLabel>
    <relationshipName>Monthly_KPI_Employee_Detail</relationshipName>
    <type>Lookup</type>
</CustomField>