force-app/main/default/objects/Monthly_KPI_Employee_Detail__c/fields/Case_Link__c.field-meta.xml
<CustomField>
    <fullName>Case_Link__c</fullName>
    <formula>If(Case__r.Id != null , LEFT($Api.Partner_Server_URL_260, FIND( &apos;/services&apos;, $Api.Partner_Server_URL_260)) + Case__r.Id , &apos;&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Case Link</label>
    <type>Text</type>
</CustomField>