force-app/main/default/objects/Monthly_KPI_Employee_Detail__c/fields/Case_Name__c.field-meta.xml
<CustomField>
    <fullName>Case_Name__c</fullName>
    <formula>Case__r.CaseNumber</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Case Name</label>
    <type>Text</type>
</CustomField>