force-app/main/default/objects/Monthly_KPI_Employee_Detail__c/fields/Commission_Rate__c.field-meta.xml
<CustomField>
    <fullName>Commission_Rate__c</fullName>
    <formula>If( AND(OR(Monthly_KPI_Employee__r.Role__c == &apos;Sales Consultant&apos;,Monthly_KPI_Employee__r.Role__c == &apos;Sales Supevisor&apos;), Text(Commission_Type__c) == &apos;Promotion In&apos;),0.65, 
If( AND(OR(Monthly_KPI_Employee__r.Role__c == &apos;Sales Consultant&apos;,Monthly_KPI_Employee__r.Role__c == &apos;Sales Supevisor&apos;), Text(Commission_Type__c) == &apos;Promotion Out&apos;),0.45, 
If( AND(OR(Monthly_KPI_Employee__r.Role__c == &apos;Sales Consultant&apos;,Monthly_KPI_Employee__r.Role__c == &apos;Sales Supevisor&apos;), Text(Commission_Type__c) == &apos;E-Commerce&apos;),0.25,
If( AND(OR(Monthly_KPI_Employee__r.Role__c == &apos;Sales Consultant&apos;,Monthly_KPI_Employee__r.Role__c == &apos;Sales Supevisor&apos;), Text(Commission_Type__c) == &apos;Used Bike&apos;),20,
If( AND(Monthly_KPI_Employee__r.Role__c == &apos;Sales Manager&apos;, Text(Commission_Type__c) == &apos;Used Bike&apos;),5, 0.125 )))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Commission Rate</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>