force-app/main/default/objects/Monthly_KPI_Employee_Detail__c/fields/Commission_Type__c.field-meta.xml
<CustomField>
    <fullName>Commission_Type__c</fullName>
    <label>Commission Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Used Bike</fullName>
            </value>
            <value>
                <fullName>Promotion In</fullName>
            </value>
            <value>
                <fullName>Promotion Out</fullName>
            </value>
            <value>
                <fullName>E-Commerce</fullName>
            </value>
            <value>
                <fullName>Hour Sold Revenue</fullName>
            </value>
            <value>
                <fullName>Part Revenue</fullName>
            </value>
            <value>
                <fullName>A&amp;A Revenue</fullName>
            </value>
            <value>
                <fullName>Voucher</fullName>
            </value>
            <value>
                <fullName>Discount</fullName>
            </value>
            <value>
                <fullName>Coupon / Warranty</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>