force-app/main/default/objects/Monthly_KPI_Employee_Detail__c/fields/Customer__c.field-meta.xml
<CustomField>
    <fullName>Customer__c</fullName>
    <formula>IF(ISBLANK( Order__r.Account.FirstName ),Order__r.Account.LastName,Order__r.Account.FirstName + &apos; &apos; + Order__r.Account.LastName)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Customer</label>
    <type>Text</type>
</CustomField>