force-app/main/default/objects/Monthly_KPI_Employee_Detail__c/fields/Delivery_Date__c.field-meta.xml
<CustomField>
    <fullName>Delivery_Date__c</fullName>
    <formula>Order__r.Delivery_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Delivery Date</label>
    <type>Date</type>
</CustomField>