force-app/main/default/objects/Monthly_KPI_Employee_Detail__c/fields/Follow_Fail__c.field-meta.xml
<CustomField>
    <fullName>Follow_Fail__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Follow Fail</label>
    <referenceTo>Follow_Fail__c</referenceTo>
    <relationshipLabel>Monthly KPI Employee Detail</relationshipLabel>
    <relationshipName>Monthly_KPI_Employee_Detail</relationshipName>
    <type>Lookup</type>
</CustomField>