force-app/main/default/objects/Monthly_KPI_Employee_Detail__c/fields/Follow_Fail_Link__c.field-meta.xml
<CustomField>
    <fullName>Follow_Fail_Link__c</fullName>
    <formula>If(Follow_Fail__r.Id != null , LEFT($Api.Partner_Server_URL_260, FIND( &apos;/services&apos;, $Api.Partner_Server_URL_260))  + Follow_Fail__r.Id , &apos;&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Follow Fail Link</label>
    <type>Text</type>
</CustomField>