force-app/main/default/objects/Monthly_KPI_Employee_Detail__c/fields/Follow_Fail_Name__c.field-meta.xml
<CustomField>
    <fullName>Follow_Fail_Name__c</fullName>
    <formula>Follow_Fail__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Follow Fail Name</label>
    <type>Text</type>
</CustomField>