force-app/main/default/objects/Monthly_KPI_Employee_Detail__c/fields/Inventory_Transaction_Item__c.field-meta.xml
<CustomField>
    <fullName>Inventory_Transaction_Item__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Inventory Transaction Item</label>
    <referenceTo>Inventory_Transaction_Item__c</referenceTo>
    <relationshipLabel>Monthly KPI Employee Detail</relationshipLabel>
    <relationshipName>Monthly_KPI_Employee_Detail</relationshipName>
    <type>Lookup</type>
</CustomField>