force-app/main/default/objects/Monthly_KPI_Employee_Detail__c/fields/Invoice_No__c.field-meta.xml
<CustomField>
    <fullName>Invoice_No__c</fullName>
    <formula>If(Order__r.Invoice_No__c != 0 , Text(Order__r.Invoice_No__c ), &apos;&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Invoice No</label>
    <type>Text</type>
</CustomField>