force-app/main/default/objects/Monthly_KPI_Employee_Detail__c/fields/Is_Lock__c.field-meta.xml
<CustomField>
    <fullName>Is_Lock__c</fullName>
    <formula>Monthly_KPI_Employee__r.Is_Lock__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Lock</label>
    <type>Checkbox</type>
</CustomField>