force-app/main/default/objects/Monthly_KPI_Employee_Detail__c/fields/Monthly_KPI_Employee__c.field-meta.xml
<CustomField>
    <fullName>Monthly_KPI_Employee__c</fullName>
    <label>Monthly KPI Employee</label>
    <referenceTo>Monthly_KPI_Employee__c</referenceTo>
    <relationshipLabel>Monthly KPI Employee Detail</relationshipLabel>
    <relationshipName>Monthly_KPI_Employee_Detail</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>