force-app/main/default/objects/Monthly_KPI_Employee_Detail__c/fields/Monthly_Task__c.field-meta.xml
<CustomField>
    <fullName>Monthly_Task__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Monthly Task</label>
    <referenceTo>Monthly_Task__c</referenceTo>
    <relationshipLabel>Monthly KPI Employee Detail</relationshipLabel>
    <relationshipName>Monthly_KPI_Employee_Detail</relationshipName>
    <type>Lookup</type>
</CustomField>