force-app/main/default/objects/Monthly_KPI_Employee_Detail__c/fields/Monthly_Task_Link__c.field-meta.xml
<CustomField>
    <fullName>Monthly_Task_Link__c</fullName>
    <formula>if(Monthly_Task__r.Id != null , LEFT($Api.Partner_Server_URL_260, FIND( &apos;/services&apos;, $Api.Partner_Server_URL_260))  + Monthly_Task__r.Id , &apos;&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Monthly Task Link</label>
    <type>Text</type>
</CustomField>