force-app/main/default/objects/Monthly_KPI_Employee_Detail__c/fields/Monthly_Task_Name__c.field-meta.xml
<CustomField>
    <fullName>Monthly_Task_Name__c</fullName>
    <formula>Monthly_Task__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Monthly Task Name</label>
    <type>Text</type>
</CustomField>