force-app/main/default/objects/Monthly_KPI_Employee_Detail__c/fields/Order_Item_Number__c.field-meta.xml
<CustomField>
    <fullName>Order_Item_Number__c</fullName>
    <formula>Order_Product__r.OrderItemNumber</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Order Item Number</label>
    <type>Text</type>
</CustomField>