force-app/main/default/objects/Monthly_KPI_Employee_Detail__c/fields/Order_Link__c.field-meta.xml
<CustomField>
    <fullName>Order_Link__c</fullName>
    <formula>If( Order__r.Id != null , LEFT($Api.Partner_Server_URL_260, FIND( &apos;/services&apos;, $Api.Partner_Server_URL_260))+ Order__r.Id , &apos;&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Order Link</label>
    <type>Text</type>
</CustomField>