force-app/main/default/objects/Monthly_KPI_Employee_Detail__c/fields/Roster_Management__c.field-meta.xml
<CustomField>
    <fullName>Roster_Management__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Roster Management</label>
    <referenceTo>Roster_Management__c</referenceTo>
    <relationshipLabel>Monthly KPI Employee Detail</relationshipLabel>
    <relationshipName>Monthly_KPI_Employee_Detail</relationshipName>
    <type>Lookup</type>
</CustomField>