force-app/main/default/objects/Monthly_KPI_Employee_Detail__c/fields/Roster_Managements_Name__c.field-meta.xml
<CustomField>
    <fullName>Roster_Managements_Name__c</fullName>
    <formula>Roster_Management__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Roster Managements Name</label>
    <type>Text</type>
</CustomField>