force-app/main/default/objects/Monthly_KPI_Employee_Detail__c/fields/Sales_Owner__c.field-meta.xml
<CustomField>
    <fullName>Sales_Owner__c</fullName>
    <label>Sales Owner</label>
    <length>255</length>
    <type>Text</type>
</CustomField>