force-app/main/default/objects/Monthly_KPI_Employee_Detail__c/fields/Stock_History__c.field-meta.xml
<CustomField>
    <fullName>Stock_History__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Stock History</label>
    <referenceTo>Stock_History__c</referenceTo>
    <relationshipLabel>Monthly KPI Employee Detail</relationshipLabel>
    <relationshipName>Monthly_KPI_Employee_Detail</relationshipName>
    <type>Lookup</type>
</CustomField>