force-app/main/default/objects/Monthly_KPI_Employee_Detail__c/fields/Stock_History_Link__c.field-meta.xml
<CustomField>
    <fullName>Stock_History_Link__c</fullName>
    <formula>If( Stock_History__r.Id != null , LEFT($Api.Partner_Server_URL_260, FIND( &apos;/services&apos;, $Api.Partner_Server_URL_260)) + Stock_History__r.Id , &apos;&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Stock History Link</label>
    <type>Text</type>
</CustomField>