force-app/main/default/objects/Monthly_KPI_Employee_Detail__c/fields/Stock_History_Name__c.field-meta.xml
<CustomField>
    <fullName>Stock_History_Name__c</fullName>
    <formula>Stock_History__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Stock History Name</label>
    <type>Text</type>
</CustomField>