force-app/main/default/objects/Monthly_KPI_Employee_Detail__c/fields/Test_Ride__c.field-meta.xml
<CustomField>
    <fullName>Test_Ride__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Test Ride</label>
    <referenceTo>Test_Ride__c</referenceTo>
    <relationshipLabel>Monthly KPI Employee Detail</relationshipLabel>
    <relationshipName>Monthly_KPI_Employee_Detail</relationshipName>
    <type>Lookup</type>
</CustomField>