force-app/main/default/objects/Monthly_KPI_Employee_Detail__c/fields/Test_Ride_Link__c.field-meta.xml
<CustomField>
    <fullName>Test_Ride_Link__c</fullName>
    <formula>If(Test_Ride__r.Id != null, LEFT($Api.Partner_Server_URL_260, FIND( &apos;/services&apos;, $Api.Partner_Server_URL_260)) +  Test_Ride__r.Id , &apos;&apos; )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Test Ride Link</label>
    <type>Text</type>
</CustomField>