force-app/main/default/objects/Monthly_KPI_Employee_Detail__c/fields/Test_Ride_Name__c.field-meta.xml
<CustomField>
    <fullName>Test_Ride_Name__c</fullName>
    <formula>Test_Ride__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Test Ride Name</label>
    <type>Text</type>
</CustomField>