force-app/main/default/objects/Monthly_KPI_Employee_Detail__c/fields/VAT_Date__c.field-meta.xml
<CustomField>
    <fullName>VAT_Date__c</fullName>
    <formula>Order__r.Invoice_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>VAT Date</label>
    <type>Date</type>
</CustomField>