force-app/main/default/objects/Monthly_KPI_Employee_Detail__c/fields/VIN__c.field-meta.xml
<CustomField>
    <fullName>VIN__c</fullName>
    <formula>Order__r.Frame_No1__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>VIN</label>
    <type>Text</type>
</CustomField>