force-app/main/default/objects/Monthly_KPI_Employee_Detail__c/fields/Warehouse_Inventory__c.field-meta.xml
<CustomField>
    <fullName>Warehouse_Inventory__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Warehouse Inventory</label>
    <referenceTo>Warehouse_Inventory__c</referenceTo>
    <relationshipLabel>Monthly KPI Employee Detail</relationshipLabel>
    <relationshipName>Monthly_KPI_Employee_Detail</relationshipName>
    <type>Lookup</type>
</CustomField>