force-app/main/default/objects/Monthly_KPI_Employee_Detail__c/fields/Warehouse_Inventory_Link__c.field-meta.xml
<CustomField>
    <fullName>Warehouse_Inventory_Link__c</fullName>
    <formula>If( Warehouse_Inventory__r.Id != null , LEFT($Api.Partner_Server_URL_260, FIND( &apos;/services&apos;, $Api.Partner_Server_URL_260)) + Warehouse_Inventory__r.Id , &apos;&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Warehouse Inventory Link</label>
    <type>Text</type>
</CustomField>