force-app/main/default/objects/Monthly_KPI_Employee_Detail__c/fields/Warehouse_Inventory_Name__c.field-meta.xml
<CustomField>
    <fullName>Warehouse_Inventory_Name__c</fullName>
    <formula>Warehouse_Inventory__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Warehouse Inventory Name</label>
    <type>Text</type>
</CustomField>