force-app/main/default/objects/Monthly_KPI_Employee_Detail__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>OBJECT_ID</columns>
    <columns>Commission_Amount__c</columns>
    <columns>Monthly_KPI_Employee__c</columns>
    <columns>Commission_Rate__c</columns>
    <columns>Commission_Type__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATEDBY_USER.ALIAS</columns>
    <columns>CREATED_DATE</columns>
    <columns>Customer__c</columns>
    <columns>Follow_Fail_Name__c</columns>
    <columns>Invoice_No__c</columns>
    <columns>Warehouse_Inventory_Link__c</columns>
    <columns>Rule__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Commission_Type__c</field>
        <operation>equals</operation>
        <value>Discount</value>
    </filters>
    <filters>
        <field>Order__c</field>
        <operation>equals</operation>
        <value>00008905</value>
    </filters>
    <label>All</label>
</ListView>